--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9",
-    "slugify": "^1.6.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "slugify": "^1.6.6"
   }
 }
